# object_modelling

./: README  README.md
registration/registration_server/: CMakeLists.txt  README.md  package.xml
registration/registration_server/include/rgbd_view_registration_server/: rgbd_view_registration_optimizer.h
registration/registration_server/src/: rgbd_view_registration_main.cpp  rgbd_view_registration_optimizer.cpp  sift_wrapper.cpp
registration/registration_server/test/: incremental_rgbd_view_registration.cpp  reference_test_rgbd_view_registration.cpp  segment_with_reference.cpp  test_rgbd_view_registration.cpp
registration/registration_services/: CMakeLists.txt  README.md  package.xml
registration/registration_services/srv/: RegistrationService.srv  RegistrationServiceWithReference.srv
registration/siftgpu/: package.xml
rgbd_grabber/: CMakeLists.txt  README.md  package.xml
rgbd_grabber/src/: rgbd_grabber.cpp
segmentation/: CMakeLists.txt  package.xml
segmentation/launch/: temp_frames.launch
segmentation/src/: segment_cluster.cpp
