<?xml version="1.0"?>
<package>
  <name>segmentation</name>
  <version>0.0.0</version>
  <description>segmentation</description>

  <maintainer email="rares@todo.todo">rares</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>tf_conversions</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>registration_services</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>libpcl-all</run_depend>
  <run_depend>tf</run_depend>
  <run_depend> cv_bridge</run_depend>
  <run_depend> tf_conversions</run_depend>

  <export>
  </export>
</package>
